--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: python
-          image: khalilsellamii/tp_k8s_app:v1.0
+          image: khalilsellamii/tp_k8s_app:latest
           ports:
           - containerPort: 5000
